Migrating from ngRoute to ui-router

--- a/partials/server-add.html
+++ b/partials/server-add.html
@@ -22,7 +22,7 @@
 
     <div class="panel-heading">
      <h3 class="panel-title">
-      <a href="#/kpi/{{mlc.server}}">{{mlc.server}}</a>
+      <a ui-sref="stats({ server: mlc.server })">{{mlc.server}}</a>
      </h3>
     </div>
 
@@ -39,9 +39,9 @@
       <td>{{mlc.alarms.minor}}</td>
      </tr>
      <tr ng-show="mlc.nodes.length>0" class="panel-footer">
-      <td width="33%"><a href="#/kpi/{{mlc.server}}">KPIs</a></td>
-      <td width="33%"><a href="#/license/{{mlc.server}}">Licenses</a></td>
-      <td width="33%"><a href="#/corba/{{mlc.server}}">Corba</a></td>
+      <td width="33%"><a ui-sref="stats({ server: mlc.server })">KPIs</a></td>
+      <td width="33%"><a ui-sref="licences({ server: mlc.server })">Licenses</a></td>
+      <td width="33%"><a ui-sref="corba({ server: mlc.server })">Corba</a></td>
      </tr>
     </table>
 
