Fixed broken <script> href in index.html; server-add.html partial now links to MLC GUI in panel header

--- a/partials/server-add.html
+++ b/partials/server-add.html
@@ -22,7 +22,7 @@
 
     <div class="panel-heading">
      <h3 class="panel-title">
-      <a ui-sref="stats({ server: mlc.server })">{{mlc.server}}</a>
+      <a href="http://{{mlc.server}}:8080">{{mlc.server}}</a>
      </h3>
     </div>
 
